# mp3_player_software

./: .gitignore  .gitmodules
my_tree/: readme.md
my_tree/board/mp3_player_d1s/configs/uboot/: uboot_mp3_player_d1s_defconfig
my_tree/board/mp3_player_d1s/dts/uboot/: mp3_player_d1s.dts
my_tree/configs/: mp3_player_d1s_defconfig
pc/: CMakeLists.txt
pc/cmake/: libtool.cmake
pc/src/: CMakeLists.txt  lv_conf.h  main.c
pc/src/mocp/: audio_conversion.c  common.c  decoder.h  equalizer.c  files.c  interface.c  playlist.c  utf8.c  utf8.h
pc/src/mocp/decoder_plugins/ffmpeg/: ffmpeg.c
